# axelar-amplifier-solana

./: Anchor.toml  Cargo.toml  deny.toml  release-plz.toml
.cargo/: audit.toml
.github/workflows/: ampd-ci.yml  audit.yaml  check.yaml  conventional-pr.yml  deny.yaml  doc.yaml  evm-ci.yaml  npm-publish.yaml  release-plz.yml  test.yaml  typos.yaml  unused-deps.yaml  zip-dyn-libs.yml
bindings/: package-lock.json  package.json
bindings/anchor_lib/: axelar-solana-gateway.rs
bindings/tests/: gateway.ts
crates/axelar-executable/src/: lib.rs
crates/axelar-solana-encoding/src/: lib.rs
crates/axelar-solana-encoding/src/types/: execute_data.rs
crates/axelar-solana-gas-service-events/: Cargo.toml
crates/axelar-solana-gas-service-events/src/: events.rs
crates/axelar-solana-gateway-test-fixtures/: Cargo.toml
crates/axelar-solana-gateway-test-fixtures/src/: base.rs  gateway.rs  test_signer.rs
crates/discriminator-utils/: Cargo.toml
crates/discriminator-utils/src/: lib.rs
crates/gateway-event-stack/src/: lib.rs
helpers/anchor-discriminators-macros/src/: lib.rs
helpers/anchor-discriminators-macros/tests/: instructions.rs  its.rs
helpers/anchor-discriminators/src/: lib.rs
helpers/event-cpi/: Cargo.toml
helpers/event-cpi-macros/: Cargo.toml
helpers/event-cpi-macros/src/: lib.rs
helpers/event-cpi-macros/tests/: account_struct.rs  event.rs
helpers/event-cpi/src/: hash.rs  lib.rs
helpers/its-instruction-builder/: Cargo.toml
helpers/its-instruction-builder/src/: lib.rs
helpers/program-utils/: Cargo.toml
helpers/program-utils/src/: lib.rs  pda.rs
helpers/program-utils/tests/integration/: pda.rs
helpers/role-management/src/: processor.rs
programs/axelar-solana-gas-service/: Cargo.toml
programs/axelar-solana-gas-service-v2/: Cargo.toml
programs/axelar-solana-gas-service-v2/src/: lib.rs
programs/axelar-solana-gas-service-v2/src/instructions/: add_native_gas.rs  add_spl_gas.rs  collect_native_fees.rs  collect_spl_fees.rs  initialize.rs  mod.rs  pay_native_for_contract_call.rs  pay_spl_for_contract_call.rs  refund_native_fees.rs  refund_spl_fees.rs  transfer_operatorship.rs
programs/axelar-solana-gas-service-v2/src/state/: config.rs  mod.rs  treasury.rs
programs/axelar-solana-gas-service-v2/tests/: add_native_gas.rs  collect_native_fees.rs  discriminators.rs  initialize.rs  pay_native_for_contract_call.rs  refund_native_fees.rs
programs/axelar-solana-gas-service/src/: discriminators.rs  events.rs  instructions.rs  lib.rs  processor.rs  state.rs
programs/axelar-solana-gas-service/src/processor/: initialize.rs  native.rs  spl.rs
programs/axelar-solana-gas-service/tests/module/: discriminators.rs  initialize.rs  main.rs
programs/axelar-solana-gateway/: Cargo.toml  README.md
programs/axelar-solana-gateway/src/: discriminators.rs  executable.rs  instructions.rs  lib.rs  processor.rs
programs/axelar-solana-gateway/src/processor/: approve_message.rs  call_contract.rs  close_message_payload.rs  commit_message_payload.rs  initialize_config.rs  initialize_message_payload.rs  initialize_payload_verification_session.rs  rotate_signers.rs  transfer_operatorship.rs  validate_message.rs  verify_signature.rs  write_message_payload.rs
programs/axelar-solana-gateway/src/state/: config.rs  incoming_message.rs  message_payload.rs  signature_verification.rs  signature_verification_pda.rs  verifier_set_tracker.rs
programs/axelar-solana-gateway/tests/: discriminators.rs
programs/axelar-solana-gateway/tests/integration/: approve_message.rs  initialize_message_payload.rs  initialize_signature_verification.rs  main.rs  rotate_signers.rs  transfer_operatorship.rs  verify_signature.rs
programs/axelar-solana-governance/: Cargo.toml
programs/axelar-solana-governance/src/: discriminators.rs  instructions.rs  lib.rs
programs/axelar-solana-governance/src/processor/: init_config.rs  mod.rs  update_config.rs
programs/axelar-solana-governance/src/state/: mod.rs  proposal.rs
programs/axelar-solana-governance/tests/: discriminators.rs
programs/axelar-solana-governance/tests/module/: helpers.rs  update_config.rs
programs/axelar-solana-its/: Cargo.toml
programs/axelar-solana-its-cpi-caller/: Cargo.toml
programs/axelar-solana-its-cpi-caller/src/: entrypoint.rs  instruction.rs  lib.rs  processor.rs  state.rs
programs/axelar-solana-its/src/: accounts.rs  discriminators.rs  executable.rs  instruction.rs  lib.rs
programs/axelar-solana-its/src/instruction/: interchain_token.rs  token_manager.rs
programs/axelar-solana-its/src/processor/: gmp.rs  interchain_token.rs  interchain_transfer.rs  link_token.rs  mod.rs  token_manager.rs
programs/axelar-solana-its/src/state/: deploy_approval.rs  flow_limit.rs  interchain_transfer_execute.rs  mod.rs  token_manager.rs
programs/axelar-solana-its/tests/: discriminators.rs
programs/axelar-solana-its/tests/module/: cpi_transfer.rs  deploy_interchain_token.rs  deploy_manager_mismatch.rs  deploy_remote.rs  deployment_approval_bypass.rs  fee_handling.rs  flow_limits.rs  from_evm_to_solana.rs  from_solana_to_evm.rs  handover_mint_authority.rs  main.rs  (+7 more)
programs/axelar-solana-memo-program/: Cargo.toml
programs/axelar-solana-memo-program/src/: instruction.rs  lib.rs  processor.rs
programs/axelar-solana-multicall/: Cargo.toml
programs/axelar-solana-multicall/src/: lib.rs  processor.rs
programs/axelar-solana-operators/: Cargo.toml  README.md
programs/axelar-solana-operators/src/: lib.rs
programs/axelar-solana-operators/src/instructions/: add_operator.rs  initialize.rs  mod.rs  remove_operator.rs  transfer_owner.rs
programs/axelar-solana-operators/src/state/: mod.rs
programs/axelar-solana-operators/tests/: tests.rs
programs/dummy-axelar-solana-event-cpi/: Cargo.toml
programs/dummy-axelar-solana-event-cpi/examples/: emit_memo.rs
programs/dummy-axelar-solana-event-cpi/src/: instruction.rs  processor.rs
programs/dummy-axelar-solana-gateway/src/: instructions.rs  processor.rs
programs/relayer-discovery/: README.md
programs/relayer-discovery/src/: relayer_discovery.rs
xtask/src/: main.rs
(+11 files in other folders)
