[package]
name = "axelar-solana-gas-service-v2"
version.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
license.workspace = true
edition.workspace = true

[dependencies]
anchor-lang.workspace = true
anchor-spl.workspace = true
axelar-solana-gas-service-events.workspace = true
program-utils.workspace = true
bytemuck.workspace = true

[dev-dependencies]
axelar-solana-gateway-test-fixtures.workspace = true
axelar-solana-gas-service.workspace = true

[lints]
workspace = true

[lib]
name = "axelar_solana_gas_service_v2"
crate-type = ["cdylib", "lib"]

[features]
no-entrypoint = []

cpi = ["no-entrypoint"]
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]
anchor-debug = []
custom-heap = []
custom-panic = []

devnet-amplifier = [
	"axelar-solana-gateway-test-fixtures/devnet-amplifier",
	"program-utils/devnet-amplifier",
]
stagenet = [
	"axelar-solana-gateway-test-fixtures/stagenet",
	"program-utils/stagenet",
]
testnet = [
	"axelar-solana-gateway-test-fixtures/testnet",
	"program-utils/testnet",
]
mainnet = [
	"axelar-solana-gateway-test-fixtures/mainnet",
	"program-utils/mainnet",
]
default = ["devnet-amplifier"]
