[package]
name = "axelar-solana-operators"
version.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
license.workspace = true
edition.workspace = true

[dependencies]
anchor-lang.workspace = true
anchor-spl.workspace = true
program-utils.workspace = true

[dev-dependencies]
solana-sdk-ids.workspace = true
mollusk-svm.workspace = true
solana-sdk.workspace = true

[lints]
workspace = true

[lib]
name = "axelar_solana_operators"
crate-type = ["cdylib", "lib"]

[features]
no-entrypoint = []

cpi = ["no-entrypoint"]
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]
anchor-debug = []
custom-heap = []
custom-panic = []

devnet-amplifier = ["program-utils/devnet-amplifier"]
stagenet = ["program-utils/stagenet"]
testnet = ["program-utils/testnet"]
mainnet = ["program-utils/mainnet"]
default = ["devnet-amplifier"]
